; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_i2c.c_intel_gpio_setup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_i2c.c_intel_gpio_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.intel_gmbus = type { %struct.TYPE_3__, i64, %struct.i2c_algo_bit_data, %struct.drm_i915_private* }
%struct.TYPE_3__ = type { %struct.i2c_algo_bit_data* }
%struct.i2c_algo_bit_data = type { %struct.intel_gmbus*, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.drm_i915_private = type { i64 }

@gmbus_ports = common dso_local global %struct.TYPE_4__* null, align 8
@set_data = common dso_local global i32 0, align 4
@set_clock = common dso_local global i32 0, align 4
@get_data = common dso_local global i32 0, align 4
@get_clock = common dso_local global i32 0, align 4
@intel_gpio_pre_xfer = common dso_local global i32 0, align 4
@intel_gpio_post_xfer = common dso_local global i32 0, align 4
@I2C_RISEFALL_TIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_gmbus*, i32)* @intel_gpio_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intel_gpio_setup(%struct.intel_gmbus* %0, i32 %1) #0 {
  %3 = alloca %struct.intel_gmbus*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_i915_private*, align 8
  %6 = alloca %struct.i2c_algo_bit_data*, align 8
  store %struct.intel_gmbus* %0, %struct.intel_gmbus** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.intel_gmbus*, %struct.intel_gmbus** %3, align 8
  %8 = getelementptr inbounds %struct.intel_gmbus, %struct.intel_gmbus* %7, i32 0, i32 3
  %9 = load %struct.drm_i915_private*, %struct.drm_i915_private** %8, align 8
  store %struct.drm_i915_private* %9, %struct.drm_i915_private** %5, align 8
  %10 = load %struct.intel_gmbus*, %struct.intel_gmbus** %3, align 8
  %11 = getelementptr inbounds %struct.intel_gmbus, %struct.intel_gmbus* %10, i32 0, i32 2
  store %struct.i2c_algo_bit_data* %11, %struct.i2c_algo_bit_data** %6, align 8
  %12 = load %struct.drm_i915_private*, %struct.drm_i915_private** %5, align 8
  %13 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @gmbus_ports, align 8
  %16 = load i32, i32* %4, align 4
  %17 = sub nsw i32 %16, 1
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %14, %21
  %23 = load %struct.intel_gmbus*, %struct.intel_gmbus** %3, align 8
  %24 = getelementptr inbounds %struct.intel_gmbus, %struct.intel_gmbus* %23, i32 0, i32 1
  store i64 %22, i64* %24, align 8
  %25 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %26 = load %struct.intel_gmbus*, %struct.intel_gmbus** %3, align 8
  %27 = getelementptr inbounds %struct.intel_gmbus, %struct.intel_gmbus* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  store %struct.i2c_algo_bit_data* %25, %struct.i2c_algo_bit_data** %28, align 8
  %29 = load i32, i32* @set_data, align 4
  %30 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %31 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %30, i32 0, i32 8
  store i32 %29, i32* %31, align 4
  %32 = load i32, i32* @set_clock, align 4
  %33 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %34 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %33, i32 0, i32 7
  store i32 %32, i32* %34, align 8
  %35 = load i32, i32* @get_data, align 4
  %36 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %37 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %36, i32 0, i32 6
  store i32 %35, i32* %37, align 4
  %38 = load i32, i32* @get_clock, align 4
  %39 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %40 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %39, i32 0, i32 5
  store i32 %38, i32* %40, align 8
  %41 = load i32, i32* @intel_gpio_pre_xfer, align 4
  %42 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %43 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %42, i32 0, i32 4
  store i32 %41, i32* %43, align 4
  %44 = load i32, i32* @intel_gpio_post_xfer, align 4
  %45 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %46 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %45, i32 0, i32 3
  store i32 %44, i32* %46, align 8
  %47 = load i32, i32* @I2C_RISEFALL_TIME, align 4
  %48 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %49 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %48, i32 0, i32 2
  store i32 %47, i32* %49, align 4
  %50 = call i32 @usecs_to_jiffies(i32 2200)
  %51 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %52 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %51, i32 0, i32 1
  store i32 %50, i32* %52, align 8
  %53 = load %struct.intel_gmbus*, %struct.intel_gmbus** %3, align 8
  %54 = load %struct.i2c_algo_bit_data*, %struct.i2c_algo_bit_data** %6, align 8
  %55 = getelementptr inbounds %struct.i2c_algo_bit_data, %struct.i2c_algo_bit_data* %54, i32 0, i32 0
  store %struct.intel_gmbus* %53, %struct.intel_gmbus** %55, align 8
  ret void
}

declare dso_local i32 @usecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
